# PyIRI

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  main.yml
Code/: PyIRI.py  PyIRI_Plotting_Library.py
Es_Coefficients/: Es14.asc  Es15.asc  Es17.asc  Es18.asc  Es20.asc  Es21.asc  Es22.asc
IGRF/: IGRF13.shc
PyIRI/: PyIRI.py  PyIRI_IGRF_Library.py  PyIRI_Library.py  Untitled.ipynb  __init__.py  edp_update.py  igrf_library.py  main_library.py  plotting.py  pyiri.py  sh_library.py
PyIRI/solar_drivers/: Solar_Driver_F107.txt
PyIRI/tests/: __init__.py  test_edp_update.py  test_igrf_lib.py  test_igrf_library.py  test_main_lib.py  test_main_library.py  test_regression_monthly_mean.py  test_regression_single_location.py  test_sh_library.py
PyIRI_Paper/: Forsythe.bib  agujournaltemplate.aux  agujournaltemplate.bbl  agujournaltemplate.blg  agujournaltemplate.tex
docs/: Makefile  api.rst  citing.rst  conf.py  examples.rst  index.rst  installation.rst  overview.rst
docs/examples/: ex_basic.rst  ex_daily_parameters.rst  ex_monthly_mean_parameters.rst  ex_single_location.rst  ex_terminal_friendly.rst  ex_vtec.rst  ex_year_run.rst
docs/testdata/: Test_Output_Mean_Monthly_Parameters.json
docs/tutorials/: Coordinate_Transformation.ipynb  Daily_parameters.ipynb  Generate_Apex_Coefficients.ipynb  Generate_SH_Coefficients.ipynb  Mean_monthly_parameters.ipynb  (+6 more)
tutorials/: PyIRI.ipynb
(+15 files in other folders)
