[build-system]
requires = ["setuptools >= 38.6", "pip >= 10"]
build-backend = "setuptools.build_meta"

[project]
name = "PyIRI"
version = "0.0.2"
description = "Python implementation of International Reference Ionosphere"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Victoriya Forsythe", email = "victoriya.makarevich@nrl.navy.mil"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
keywords = [
  "ionosphere",
  "modeling",
  "modelling"
]
dependencies = [
  "fortranformat",
  "matplotlib",
  "numpy",
  "scipy"
]

[project.optional-dependencies]
test = [
  "coveralls",
  "flake8",
  "flake8-docstrings",
  "hacking >= 1.0",
  "pytest",
  "pytest-cov",
]
doc = [
  "extras_require",
  "ipython",
  "m2r2",
  "numpydoc",
  "sphinx",
  "sphinx_rtd_theme >= 1.2.2"
]

[project.urls]
Documentation = "https://pyiri.readthedocs.io/en/latest/"
Source = "https://github.com/victoriyaforsythe/PyIRI"

[tool.coverage.report]
